feat: browse idea page construction

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" [routerLink]="KadkRoute.SendIdea">Send Idea</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="KadkRoute.BrowseIdea">Browse Ideas</a>
+          <a class="nav-link" [routerLink]="KadkRoute.BrowseIdeas">Browse Ideas</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="KadkRoute.Feedback">Feedback</a>
