--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/material.css';
+@import '~@swimlane/ngx-datatable/release/assets/icons.css';
+
 @import "assets/scss/index";
